--- a/css/search-page.css
+++ b/css/search-page.css
@@ -15,12 +15,15 @@ body {
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .search-container {
-    width: 100%;
+    flex: 1;
     padding: 0 12px;
-    overflow: scroll;
+    overflow-y: auto;
+    height: 100%;
 }
 
 .search-box {
@@ -97,7 +100,7 @@ body {
 }
 
 .sidebar {
-    width: 25%;
+    width: 19%;
     height: 100%;
     background-color: #fff;
     padding: 20px;
@@ -182,6 +185,13 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    max-height: 2000px;
+    transition: max-height .8s;
+}
+
+.collapsed {
+    max-height: 123px;
+    overflow: hidden;
 }
 
 /* Custom Checkbox Styling */
@@ -269,7 +279,8 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    height: 100%;
+    flex: 1;
+    overflow: hidden;
 }
 
 /* Cars Grid */
@@ -422,7 +433,3 @@ body {
     background-color: #fff;
     padding: 20px;
 }
-
-
-
-
