Implement filtering and searching

--- a/css/search-page.css
+++ b/css/search-page.css
@@ -99,7 +99,7 @@ body {
     background-color: #323f4e;
 }
 
-.sidebar {
+.filters-container {
     width: 19%;
     height: 100%;
     background-color: #fff;
