--- a/css/car-details.css
+++ b/css/car-details.css
@@ -440,10 +440,10 @@ label {
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: none;
 }
 
 #left {
